boton solicitud adopcion

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -46,7 +46,7 @@
                     <li><a class="nav-link" href="/perfil">Mi perfil</a></li>
                     <!-- Redirige a la lista de protectoras -->
                     <li><a class="nav-link" href="/misperros">Mis perros</a></li>
-                    <li><a class="nav-link" href="#"> Solicitudes de adopción</a></li>
+                    <li><a class="nav-link" href="/solicitudesadopcion"> Solicitudes de adopción</a></li>
                     <% }else if(tipo === "ProtectoraPendiente"){%>
                         <li><a class="nav-link" href="/perfil">Mi perfil</a></li>
                     <% }else if(tipo === "Administrador"){%>
