Correccion ver detalle perro
correccion ver detalle de un perro con login protectora

--- a/views/misperros.ejs
+++ b/views/misperros.ejs
@@ -63,7 +63,7 @@
                                 </p>
                             </div>
                             <form action="/perro" method="GET">
-                                <input type="hidden" name="ident" value="<%= p.id %>">
+                                <input type="hidden" name="idPerro" value="<%= p.id %>">
                                 <input type="submit" class="form-group col-md-3 btn btn-info botonInfo" value="Ver Detalle"> 
                                 <button type="submit" class="btn btn-danger " formmethod="get" formaction="/eliminarperro">Eliminar</button>
                             </form>
