Vista detall protectora direccion

--- a/public/css/estilodetalleprotectora.css
+++ b/public/css/estilodetalleprotectora.css
@@ -43,10 +43,18 @@
 .externo {
     margin-top: 50px;
 }
-.mapa{
-    margin-left:60%;
+ul{
+    list-style-type: none;
+   
 }
-
+.mapa li{
+    display: inline;
+ 
+    
+}
+.mapa button{
+    float:right;
+}
 .margenBajo{
 	margin-bottom:10px;
 }
