--- a/views/detalleprotectora.ejs
+++ b/views/detalleprotectora.ejs
@@ -65,11 +65,12 @@
                         </div>
                         <div class="panel-body">
                             <div>
-                                <%= datos.direccion  %>
+                                <ul class="mapa"> 
+                                    <li><%= datos.direccion  %></li>
                             <% if(datos.latitud !== undefined){%>
-                                <button class="btn btn-primary mapa" data-toggle="modal" data-target="#ModalMessage">
+                            <li><button class="btn btn-primary" data-toggle="modal" data-target="#ModalMessage">
                                         Mostrar mapa
-                                </button>
+                                </button></li>
                                 <!-- Modal -->
                                 <div class="modal fade" id="ModalMessage" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                                     <div class="modal-dialog">
@@ -102,7 +103,8 @@
                                         </div>
                                     </div>
                                 </div>
-                            <%}%> 
+                            <%}%>
+                                </ul>
                         </div>       
                         </div>
                     </div>
