--- a/views/modificarProtectora.ejs
+++ b/views/modificarProtectora.ejs
@@ -37,7 +37,7 @@
                 </div>
             <%}}%>
 			         
-			<form id="login" class="form-login formRegistro justify" action="/modProtectora" method="POST">
+			<form id="login" class="form-login formRegistro justify" action="/modProtectora" method="POST" enctype="multipart/form-data">
 				<h1>Modificar los campos que considere necesario y pulsar en Modificar.</h1>
 			  <div class="form-row">
 				<div class="form-group col-md-12">
