--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
 					  <!-- Modal content-->
 					  <div class="modal-content">
 						<div class="modal-header">
-						  <h4 class="modal-title">¡Se ha modificado su perfil con éxito!</h4>
+						  <h4 class="modal-title">¡Se ha modificado con éxito!</h4>
 						</div>
 						<div class="modal-body">
 						  <p>Pulsa para poder ir a su perfil</p>
