iniciar sesion adoptante y perfil adoptante

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -49,6 +49,11 @@
                     <li><a class="nav-link" href="/solicitudesadopcion"> Solicitudes de adopción</a></li>
                     <% }else if(tipo === "ProtectoraPendiente"){%>
                         <li><a class="nav-link" href="/perfil">Mi perfil</a></li>
+                    <% }else if(tipo === "Adoptante"){%>
+                        <li><a class="nav-link" href="/comoadoptar">Cómo adoptar</a></li>
+                        <li><a class="nav-link" href="/perros">Perros</a></li>
+                        <li><a class="nav-link" href="/protectoras">Protectoras</a></li>
+                        <li><a class="nav-link" href="/perfil">Mi perfil</a></li>
                     <% }else if(tipo === "Administrador"){%>
                         <li><a class="nav-link" href="/listaAdoptantes">Adoptantes</a></li>
                         <li><a class="nav-link" href="/listaProtectoras">Protectoras</a></li>
