--- a/views/modificarPerro.ejs
+++ b/views/modificarPerro.ejs
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
     <link rel="icon" type="image/png" href="img/logo.png" />
     <link rel="stylesheet" type="text/css" href="css/estilocomoadoptar.css">
+	
 </head>
 
 <body>
@@ -37,7 +38,7 @@
                 </div>
             <%}}%>
 			         
-			<form id="login" class="form-login formRegistro justify" action="/modPerro" method="POST">
+			<form id="login" class="form-login formRegistro justify" action="/modPerro" method="POST" enctype="multipart/form-data">
 				<h1>Modificar los campos que considere necesario y pulsar en Modificar.</h1>
 			  <div class="form-row">
 				<div class="form-group col-md-12">
@@ -46,7 +47,7 @@
 			  </div>
 				<div class="form-group col-md-12">
 					<label for="inputAddress">Imagen</label>
-					<input type="file" class="form-control" name="imagen" id="inputAddress1" accept="image/*" required>
+					<input type="file" class="form-control" name="imagen" id="inputAddress1" accept="image/*"><span class="red">Solo añadir imagen si quiere cambiar la actual.</span>
 			  </div>
 				<div class="form-group col-md-3">
 				  <label for="inputEdad4">Edad</label>
