Enviar solicitud terminado
enviar solicitud terminado

--- a/views/formAdopcion.ejs
+++ b/views/formAdopcion.ejs
@@ -36,11 +36,17 @@
             </div>
         </form>
 
+        <% if(mensaje !== undefined){ %>
+            <p id="errores">
+                <%= mensaje %>
+            </p>
+            <% } %>
 
 
 
 
-        <%- include('./footer'); %>
+
+                <%- include('./footer'); %>
 </body>
 
 </html>
