--- a/public/css/estilosformularioadopcion.css
+++ b/public/css/estilosformularioadopcion.css
@@ -14,6 +14,14 @@
     font-family: 'Bree Serif', serif;
     font-size: 30px;
     margin-left: 20px;
+    margin-bottom: 10px;
+}
+
+#errores {
+    font-family: 'Bree Serif', serif;
+    font-size: 24px;
+    color: red;
+    margin-left: 160px;
     margin-bottom: 20px;
 }
 
