--- a/views/modificarProtectora.ejs
+++ b/views/modificarProtectora.ejs
@@ -75,11 +75,11 @@
 			  </div>
 			  <div class="form-group col-md-6">
 				  <label for="inputLatitud">Latitud</label>
-				  <input type="text" class="form-control" name="latitud" value="<%= datos.latitud %>" id="inputLatitud" placeholder="40.4256834" required>
+				  <input type="text" class="form-control" name="latitud" value="<%= datos.latitud %>" id="inputLatitud" placeholder="40.4256834">
 			</div>
 			<div class="form-group col-md-6">
 				  <label for="inputLongitud">Longitud</label>
-				  <input type="text" class="form-control" name="longitud" value="<%= datos.longitud %>" id="inputLongitud" placeholder="-3.6891157999999677" required>
+				  <input type="text" class="form-control" name="longitud" value="<%= datos.longitud %>" id="inputLongitud" placeholder="-3.6891157999999677">
 			</div>
 			  <div class="form-group col-md-12">
 				<label for="inputAddress2">Descripción</label>
