--- a/views/detalleprotectora.ejs
+++ b/views/detalleprotectora.ejs
@@ -67,7 +67,7 @@
                             <div>
                                 <ul class="mapa"> 
                                     <li><%= datos.direccion  %></li>
-                            <% if(datos.latitud !== undefined){%>
+                            <% if(datos.latitud !== undefined && datos.latitud !==0){%>
                             <li><button class="btn btn-primary" data-toggle="modal" data-target="#ModalMessage">
                                         Mostrar mapa
                                 </button></li>
