--- a/views/solicitudesAdopcion.ejs
+++ b/views/solicitudesAdopcion.ejs
@@ -39,7 +39,7 @@
                             <h2>Solicitudes de Adopcion</h2>
                         <% if(solicitudes.length === 0){ %>
                             <div class="alert alert-warning alerta">
-                                No hay solicitudes de protectoras actualmente
+                                No hay solicitudes actualmente
                             </div>
                         <% }else{ %>
                             <table class="table table-striped custab">
